[project]
name = "color-ot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pot>=0.9.6.post1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
]
